[gd_scene load_steps=28 format=3 uid="uid://ddjbrnypilhof"]

[ext_resource type="Script" path="res://Code/Classes/OpponentController.gd" id="1_dy58u"]
[ext_resource type="Script" path="res://Code/Classes/PlayerController.gd" id="1_uq66x"]
[ext_resource type="PackedScene" uid="uid://b1xmmcg7sdyrb" path="res://Scenes/Terrain/terrain_gen.tscn" id="2_mh00c"]
[ext_resource type="PackedScene" uid="uid://dlnfpl2m6m6xk" path="res://Scenes/Props/scenery.tscn" id="4_a7gfu"]
[ext_resource type="Script" path="res://Code/Scripts/camera_controls.gd" id="5_046qu"]
[ext_resource type="Script" path="res://Code/Scripts/mouse_capture_handler.gd" id="5_mdxii"]
[ext_resource type="PackedScene" uid="uid://p614kctv6eve" path="res://Scenes/UI/progress_bar_3d.tscn" id="6_jfgym"]
[ext_resource type="PackedScene" uid="uid://3w320yfp33fl" path="res://Scenes/UI/fader.tscn" id="6_mile2"]
[ext_resource type="PackedScene" uid="uid://boebmi3wby3r" path="res://Scenes/Props/PlayerBarn.tscn" id="6_nwu4v"]
[ext_resource type="PackedScene" uid="uid://cnfygjo801chm" path="res://Scenes/Sigil/sigil.tscn" id="7_56svx"]
[ext_resource type="Script" path="res://Code/Scripts/Units/unit_manager.gd" id="8_ha0w3"]
[ext_resource type="PackedScene" uid="uid://dub5xj3whpcmw" path="res://Scenes/PositionSelector/position_selector.tscn" id="9_ypx28"]
[ext_resource type="PackedScene" uid="uid://cwdsex7rj3xwg" path="res://Scenes/Props/caster_billboard.tscn" id="12_0id56"]
[ext_resource type="AudioStream" uid="uid://b6pi35hy72g4r" path="res://Assets/sound/spellsuccess.wav" id="12_1q0wg"]
[ext_resource type="AudioStream" uid="uid://b2pohh20c130" path="res://Assets/sound/spellfizzle.wav" id="13_h1i8k"]
[ext_resource type="Texture2D" uid="uid://1naeyclyhk6i" path="res://Assets/Images/Rory.png" id="13_i6h6p"]
[ext_resource type="Script" path="res://Code/Scripts/camera_follow.gd" id="13_jv6l7"]
[ext_resource type="PackedScene" uid="uid://db6isycrw3qsa" path="res://Scenes/Props/bird_flock.tscn" id="16_ctnln"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cv4jk"]

[sub_resource type="Sky" id="Sky_em07v"]
sky_material = SubResource("ProceduralSkyMaterial_cv4jk")

[sub_resource type="Environment" id="Environment_e4w5b"]
background_mode = 1
background_color = Color(0, 0.368627, 0.870588, 1)
sky = SubResource("Sky_em07v")
fog_light_color = Color(0.466667, 0.552941, 0, 1)
fog_light_energy = 0.79
fog_density = 0.0044

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3sww6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kn3u8"]
bg_color = Color(0.580392, 0.513726, 1, 1)

[sub_resource type="Curve" id="Curve_3mu6w"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25, 0.25), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(0.75, 0.25), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_mqksf"]
resource_local_to_scene = true
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_fdmik"]
resource_local_to_scene = true
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7xy4i"]
resource_local_to_scene = true
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Main" type="Node3D"]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e4w5b")

[node name="MainCamera" type="Camera3D" parent="." node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 35.8819, 96.5926)
fov = 30.0
size = 60.0
near = 5.0
script = ExtResource("13_jv6l7")
follow_target = NodePath("../CameraController/Camera Rotate/Camera Offset/Camera Follow Point")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
script = ExtResource("5_046qu")

[node name="Camera Rotate" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="Camera Offset" type="Node3D" parent="CameraController/Camera Rotate"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)

[node name="Camera Follow Point" type="Node3D" parent="CameraController/Camera Rotate/Camera Offset"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.790833, -0.436582, 0.428927, 0.1096, 0.790518, 0.602552, -0.602138, -0.429508, 0.673017, 0, 27.1219, 0)
shadow_enabled = true
directional_shadow_split_1 = 0.2
directional_shadow_split_2 = 0.4
directional_shadow_split_3 = 0.6
directional_shadow_max_distance = 300.0
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI Container" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_3sww6")
script = ExtResource("5_mdxii")

[node name="PlayerManaBarUi" type="ProgressBar" parent="CanvasLayer/UI Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/fill = SubResource("StyleBoxFlat_kn3u8")
value = 80.0

[node name="PlayerSigilContainer" type="CenterContainer" parent="CanvasLayer/UI Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Sigil" parent="CanvasLayer/UI Container/PlayerSigilContainer" instance=ExtResource("7_56svx")]
unique_name_in_owner = true
position = Vector2(0, 0)

[node name="OpponentSigilContainer" type="CenterContainer" parent="CanvasLayer/UI Container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="OpponentSigil" parent="CanvasLayer/UI Container/OpponentSigilContainer" instance=ExtResource("7_56svx")]
unique_name_in_owner = true
modulate = Color(0.701961, 0, 0.576471, 1)
position = Vector2(-130, 0)
is_interactable = false

[node name="AnnounceContainer" type="CenterContainer" parent="CanvasLayer/UI Container"]
layout_mode = 2

[node name="AnnounceLabel" type="Label" parent="CanvasLayer/UI Container/AnnounceContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 30

[node name="PositionSelector" parent="CanvasLayer" instance=ExtResource("9_ypx28")]
unique_name_in_owner = true

[node name="Fader" parent="CanvasLayer" instance=ExtResource("6_mile2")]
unique_name_in_owner = true

[node name="Scenery" parent="." instance=ExtResource("4_a7gfu")]
metadata/_edit_lock_ = true

[node name="BirdFlock" parent="." instance=ExtResource("16_ctnln")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -600, 25, -150)

[node name="TerrainGen" parent="." instance=ExtResource("2_mh00c")]
unique_name_in_owner = true
profile_curve = SubResource("Curve_3mu6w")
foreground_z_curve = SubResource("Curve_mqksf")
lane_z_curve = SubResource("Curve_fdmik")
background_z_curve = SubResource("Curve_7xy4i")
lane_depth = 3
foreground_depth = 30
background_depth = 30
generate_collider = false
metadata/_edit_lock_ = true

[node name="Left Side Things" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55, 0, 0)
metadata/_edit_group_ = true

[node name="Default Spawn Position" type="Node3D" parent="Left Side Things"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="PlayerHealthBar" parent="Left Side Things" instance=ExtResource("6_jfgym")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 20, 0)
fraction = 0.637

[node name="PlayerBarn" parent="Left Side Things" instance=ExtResource("6_nwu4v")]

[node name="CasterBillboard" parent="Left Side Things" instance=ExtResource("12_0id56")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200001, 15.5, 0)
texture = ExtResource("13_i6h6p")
is_left_side = true

[node name="Right Side Things" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55, 0, 0)
metadata/_edit_group_ = true

[node name="Default Spawn Position" type="Node3D" parent="Right Side Things"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86055, -9.53674e-07, 0.000247955)

[node name="EnemyHealthBar" parent="Right Side Things" instance=ExtResource("6_jfgym")]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 20, 0)
fraction = 0.637
metadata/_edit_lock_ = true

[node name="PlayerBarn2" parent="Right Side Things" instance=ExtResource("6_nwu4v")]

[node name="CasterBillboard" parent="Right Side Things" instance=ExtResource("12_0id56")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200001, 15.5, 0)
texture = ExtResource("13_i6h6p")

[node name="UnitManager" type="Node3D" parent="." node_paths=PackedStringArray("summon_default_position_left", "summon_default_position_right")]
script = ExtResource("8_ha0w3")
summon_default_position_left = NodePath("../Left Side Things/Default Spawn Position")
summon_default_position_right = NodePath("../Right Side Things/Default Spawn Position")

[node name="PlayerController" type="Node" parent="." node_paths=PackedStringArray("healthBar")]
unique_name_in_owner = true
script = ExtResource("1_uq66x")
healthBar = NodePath("../Left Side Things/PlayerHealthBar")

[node name="Spell Success Sound Player" type="AudioStreamPlayer" parent="PlayerController"]
unique_name_in_owner = true
stream = ExtResource("12_1q0wg")
volume_db = -10.0
max_polyphony = 2

[node name="Spell Fizzle Sound Player" type="AudioStreamPlayer" parent="PlayerController"]
unique_name_in_owner = true
stream = ExtResource("13_h1i8k")
max_polyphony = 2

[node name="OpponentController" type="Node" parent="." node_paths=PackedStringArray("healthBar")]
unique_name_in_owner = true
script = ExtResource("1_dy58u")
healthBar = NodePath("../Right Side Things/EnemyHealthBar")
